# can-or-bottle

./: .gitignore  README.md  calc.py  main.py  models.py  prod.py  pyproject.toml
.devcontainer/: devcontainer.json
src/: prod.py  resnet.py  test.py
