[tool.poetry]
name = "can-or-bottle"
version = "0.1.0"
description = ""
authors = ["mc_fdc <Masato.04.11.2007@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = {version = "^2.0.1+cpu", source = "torch"}
torchvision = {version = "^0.15.2+cpu", source = "torch"}
torchaudio = {version = "^2.0.2+cpu", source = "torch"}
playwright = "^1.38.0"
beautifulsoup4 = "^4.12.2"
pillow = "^10.0.1"
onnx = "^1.14.1"
onnxruntime = "^1.16.0"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "supplemental"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
